# microstructureInference

./: README.md  pyproject.toml  requirements-cuda.txt
scripts/data_analyses_01_mapping_diffractionPattern_to_BraggDiskTable/: DATA_ANALYSES_01_map_diffPatt_to_BraggDiskTable.sh  modules_detect_BraggDisks.py  step_01_map_DiffPatt_to_BraggDisksTable.py
scripts/data_analyses_02_check_performance_of_orientationPrediction/: DATA_ANALYSES_02_predict_orientations.sh  modules_for_mapping_exper_Bragg_disks_to_orientations.py  step_01_predict_orientations_from_exp_BraggDisks.py
scripts/data_analyses_03_measure_correlation_between_experiments_and_predictions/: DATA_ANALYSES_03_measure_correlation_between_prediction_and_experimental_data.sh  correlation_metric.py  step_01_measure_correlations.py
scripts/data_generate_01_synthetic_training_data/: DATA_GENERATE_01_generate_synthetic_training_data.sh  STEP_01_sample_orientation_thickness.sh  STEP_02_simulate_dynamic_diffraction.sh  STEP_03_digitize_dynamic_diffraction.sh  STEP_04_merge_and_split.sh  modules_step_01_sample_orientation_thickness.py  step_01_sample_orientation_thicnkess_mirrorOp.py  step_02_simulate_from_ori_thick_symmOper.py  step_03_digitize_BraggDisks_in_each_simulated_pattern.py  step_04_merge_data_and_split_into_train_and_valid.py
scripts/data_generate_02_synthetic_4DSTEM_data/: DATA_GENERATE_02_generate_synthetic_4DSTEM_data.sh  check_synthetic_4DSTEM_data_using_py4DSTEM-after_dog.ipynb  check_synthetic_4DSTEM_data_using_py4DSTEM.ipynb  modules_generate_synthethic_4DSTEM.py  read_and_align_4DSTEM.py  (+4 more)
(+368 files in other folders)
