[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [
   { name = "Kwanghwi Je, Erik Thiede", email = "kj355@cornell.edu"},
]
name = "orientationMapping"
version = "0.0.1"
dependencies = [
		"numpy>=2.0.1",
		"scikit-image>=0.25.0",
		"pandas",
		"pandas>=2.2.3",
		"scipy>=1.15.2",
		]

